# mini-server

./: .gitignore  example.env  pyproject.toml  stop  test_2.py  uv_run.sh  uv_test_run.sh
usrbot/: __init__.py  __main__.py  sample_config.py  usrbot.py
usrbot/bot/: bot.py  main.py  stats.py
usrbot/bot/callback/: bot_clb_msg.py
usrbot/bot/handlers/: bot_msg.py
usrbot/bot/plugins/: bat_alarm.py
usrbot/plugins/: ai_answer.py  ban_words.py  chat_info.py  coin.py  debug.py  gen_cats.py  help.py  lazert_answer.py  preloader.py  restart.py  status.py  stop.py  tiktok_downloader.py  update.py
usrbot/plugins/core/src/: genHeadres.py  gen_text.py  getCookie.py  prompt.py  streamGenarte.py
usrbot/src/: user_check.py
