[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "pyrogram>=2.0.106",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
    "aiogram>=3.20.0.post0",
    "rich>=14.1.0",
    "schedule>=1.2.2",
]
